--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ h1 {
     padding: 1%;
     padding-bottom: 1%;
     width: 75%;
-    background-color: white;
+    background-color: rgb(240, 240, 240);
     color: black;
 }
 
