--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 h1 {
+    margin-top: 1%;
     font-size: 100px;
     text-align: center;
     color: white;
@@ -30,6 +31,60 @@ h1 {
     background-color: rgb(240, 240, 240);
     color: black;
 }
+
+.target-score {
+    color: white;
+    font-size: 50px;
+    Float: left;
+    margin-left: 25%;
+}
+
+.your-score {
+    color: white;
+    font-size: 50px;
+    Float: right;
+    margin-right: 25%;
+}
+
+#targetScore {
+    margin-top: 8%;
+    margin-left: -15%;
+    height: 250px;
+    width: 250px;
+    background-color: white;
+    border-radius: 100%;
+    display: inline-block;
+}
+
+#yourScore {
+    margin-right: 24%;
+    margin-top: -16%;
+    height: 250px;
+    width: 250px;
+    background-color: white;
+    border-radius: 100%;
+    float: right;
+    display: inline-block;   
+}
+
+.wins {
+    margin-top: 7%;
+    margin-left: 37%;
+    padding-bottom: 10px;
+    font-size: 50px;
+    color: white;
+    display: block;
+}
+
+.losses {
+    margin-left: 56%;
+    padding-bottom: 14px;
+    font-size: 50px;
+    color: white;
+    margin-top: -4%;
+    display: block;
+}
+
 
 
 
@@ -67,7 +122,7 @@ button {
     background: none;
     color: #ccc;
     width: 240px;
-    height:80px;
+    height:60px;
     border: 1px solid #a208d1;
     font-size: 18px;
     border-radius: 4px;
@@ -134,4 +189,238 @@ button:hover:after {
     border: 1px solid #a208d1;
     font-size: 18px;
     border-radius: 4px;
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 1500px) {
+    
+    .target-score {
+        color: white;
+        font-size: 50px;
+        Float: left;
+        margin-left: 20%;
+    }
+    
+    .your-score {
+        color: white;
+        font-size: 50px;
+        Float: right;
+        margin-right: 15%;
+    }
+    
+    #targetScore {
+        margin-top: 8%;
+        margin-left: -16%;
+        height: 250px;
+        width: 250px;
+        background-color: white;
+        border-radius: 100%;
+        display: inline-block;
+    }
+    
+    #yourScore {
+        margin-right: 14%;
+        margin-top: -18%;
+        height: 250px;
+        width: 250px;
+        background-color: white;
+        border-radius: 100%;
+        float: right;
+        display: inline-block;   
+    }
+    
+    .losses {
+        margin-left: 56%;
+        padding-bottom: 14px;
+        font-size: 50px;
+        color: white;
+        margin-top: -5%;
+        display: block;
+    }
+
+}
+
+@media only screen and (max-width: 1300px) {
+    
+    .target-score {
+        color: white;
+        font-size: 50px;
+        Float: left;
+        margin-left: 15%;
+    }
+    
+    .your-score {
+        color: white;
+        font-size: 50px;
+        Float: right;
+        margin-right: 15%;
+    }
+    
+    #targetScore {
+        margin-top: 8%;
+        margin-left: -20%;
+        height: 250px;
+        width: 250px;
+        background-color: white;
+        border-radius: 100%;
+        display: inline-block;
+    }
+    
+    #yourScore {
+        margin-right: 14%;
+        margin-top: -20%;
+        height: 250px;
+        width: 250px;
+        background-color: white;
+        border-radius: 100%;
+        float: right;
+        display: inline-block;   
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+
+    #yourScore {
+        margin-right: 14%;
+        margin-top: -22%;
+        height: 250px;
+        width: 250px;
+        background-color: white;
+        border-radius: 100%;
+        float: right;
+        display: inline-block;   
+    }
+    
+    .losses {
+        margin-left: 56%;
+        padding-bottom: 14px;
+        font-size: 50px;
+        color: white;
+        margin-top: -6%;
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 1060px) {
+    
+    #targetScore {
+        margin-top: 8%;
+        margin-left: -25%;
+        height: 250px;
+        width: 250px;
+        background-color: white;
+        border-radius: 100%;
+        display: inline-block;
+    }
+    
+    #yourScore {
+        margin-right: 14%;
+        margin-top: -25%;
+        height: 250px;
+        width: 250px;
+        background-color: white;
+        border-radius: 100%;
+        float: right;
+        display: inline-block;   
+    }
+    .losses {
+        margin-left: 56%;
+        padding-bottom: 14px;
+        font-size: 50px;
+        color: white;
+        margin-top: -7%;
+        display: block;
+    }
+
+@media only screen and (max-width: 980px) {
+    
+    .target-score {
+        color: white;
+        font-size: 50px;
+        Float: left;
+        margin-left: 8%;
+    }
+    
+    .your-score {
+        color: white;
+        font-size: 50px;
+        Float: right;
+        margin-right: 12%;
+    }
+    
+    #targetScore {
+        margin-top: 10%;
+        margin-left: -28%;
+        height: 250px;
+        width: 250px;
+        background-color: white;
+        border-radius: 100%;
+        display: inline-block;
+    }
+    
+    #yourScore {
+        margin-right: 11%;
+        margin-top: -27%;
+        height: 250px;
+        width: 250px;
+        background-color: white;
+        border-radius: 100%;
+        float: right;
+        display: inline-block;   
+    }
+@media only screen and (max-width: 855px) {
+    
+    .target-score {
+        color: white;
+        font-size: 50px;
+        Float: left;
+        margin-left: 8%;
+    }
+    
+    .your-score {
+        color: white;
+        font-size: 50px;
+        Float: right;
+        margin-right: 12%;
+    }
+    
+    #targetScore {
+        margin-top: 10%;
+        margin-left: -31%;
+        height: 250px;
+        width: 250px;
+        background-color: white;
+        border-radius: 100%;
+        display: inline-block;
+    }
+    
+    #yourScore {
+        margin-right: 11%;
+        margin-top: -31%;
+        height: 250px;
+        width: 250px;
+        background-color: white;
+        border-radius: 100%;
+        float: right;
+        display: inline-block;   
+    }
+    .wins {
+        margin-top: 8%;
+        margin-left: 21%;
+        padding-bottom: 10px;
+        font-size: 50px;
+        color: white;
+        display: block;
+    }
+    
+    .losses {
+        margin-left: 53%;
+        padding-bottom: 14px;
+        font-size: 50px;
+        color: white;
+        margin-top: -8%;
+        display: block;
+    }
+    
 }
