--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,35 +107,6 @@ audio:hover {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Button Design Experiment */
 button {
     margin-left: 50%;
@@ -213,235 +184,155 @@ button:hover:after {
 }
 
 /* Media Queries */
-
-@media only screen and (max-width: 1500px) {
+@media (max-width: 2100px) {
     
-    .target-score {
-        color: white;
-        font-size: 50px;
-        Float: left;
+  
+    #targetScore {
+        margin-top: 8%;
+        margin-left: -13%;
+    }
+    
+    #yourScore {
+        margin-right: -13%;
+        margin-top: 8%;
+    }
+    
+    .losses {
+        margin-top: -3.5%;
+        margin-left: 56%;
+    }
+
+}
+
+@media (max-width: 1500px) {
+    
+    .target-score {  
         margin-left: 20%;
     }
     
     .your-score {
-        color: white;
-        font-size: 50px;
-        Float: right;
         margin-right: 15%;
     }
     
     #targetScore {
         margin-top: 8%;
         margin-left: -16%;
-        height: 250px;
-        width: 250px;
-        background-color: white;
-        border-radius: 100%;
-        display: inline-block;
     }
     
     #yourScore {
         margin-right: 14%;
-        margin-top: -18%;
-        height: 250px;
-        width: 250px;
-        background-color: white;
-        border-radius: 100%;
-        float: right;
-        display: inline-block;   
+        margin-top: -18%; 
     }
     
     .losses {
         margin-left: 56%;
-        padding-bottom: 14px;
-        font-size: 50px;
-        color: white;
+        padding-bottom: 14px;;
         margin-top: -5%;
-        display: block;
     }
 
 }
 
-@media only screen and (max-width: 1300px) {
+@media (max-width: 1300px) {
     
     .target-score {
-        color: white;
-        font-size: 50px;
-        Float: left;
         margin-left: 15%;
     }
     
     .your-score {
-        color: white;
-        font-size: 50px;
-        Float: right;
         margin-right: 15%;
     }
     
     #targetScore {
         margin-top: 8%;
         margin-left: -20%;
-        height: 250px;
-        width: 250px;
-        background-color: white;
-        border-radius: 100%;
-        display: inline-block;
     }
     
     #yourScore {
         margin-right: 14%;
-        margin-top: -20%;
-        height: 250px;
-        width: 250px;
-        background-color: white;
-        border-radius: 100%;
-        float: right;
-        display: inline-block;   
+        margin-top: -20%; 
     }
 }
 
-@media only screen and (max-width: 1200px) {
+@media (max-width: 1200px) {
 
     #yourScore {
         margin-right: 14%;
         margin-top: -22%;
-        height: 250px;
-        width: 250px;
-        background-color: white;
-        border-radius: 100%;
-        float: right;
-        display: inline-block;   
     }
     
     .losses {
         margin-left: 56%;
         padding-bottom: 14px;
-        font-size: 50px;
-        color: white;
         margin-top: -6%;
-        display: block;
     }
 }
 
-@media only screen and (max-width: 1060px) {
+@media (max-width: 1060px) {
     
     #targetScore {
         margin-top: 8%;
         margin-left: -25%;
-        height: 250px;
-        width: 250px;
-        background-color: white;
-        border-radius: 100%;
-        display: inline-block;
     }
     
     #yourScore {
         margin-right: 14%;
-        margin-top: -25%;
-        height: 250px;
-        width: 250px;
-        background-color: white;
-        border-radius: 100%;
-        float: right;
-        display: inline-block;   
+        margin-top: -25%;  
     }
     .losses {
         margin-left: 56%;
         padding-bottom: 14px;
-        font-size: 50px;
-        color: white;
         margin-top: -7%;
-        display: block;
     }
-
-@media only screen and (max-width: 980px) {
+}
+@media (max-width: 980px) {
     
     .target-score {
-        color: white;
-        font-size: 50px;
-        Float: left;
         margin-left: 8%;
     }
     
     .your-score {
-        color: white;
-        font-size: 50px;
-        Float: right;
         margin-right: 12%;
     }
     
     #targetScore {
         margin-top: 10%;
         margin-left: -28%;
-        height: 250px;
-        width: 250px;
-        background-color: white;
-        border-radius: 100%;
-        display: inline-block;
     }
-    
+   
     #yourScore {
         margin-right: 11%;
         margin-top: -27%;
-        height: 250px;
-        width: 250px;
-        background-color: white;
-        border-radius: 100%;
-        float: right;
-        display: inline-block;   
     }
-@media only screen and (max-width: 855px) {
+}
+@media (max-width: 855px) {
     
     .target-score {
-        color: white;
-        font-size: 50px;
-        Float: left;
         margin-left: 8%;
     }
     
     .your-score {
-        color: white;
-        font-size: 50px;
-        Float: right;
         margin-right: 12%;
     }
     
     #targetScore {
         margin-top: 10%;
         margin-left: -31%;
-        height: 250px;
-        width: 250px;
-        background-color: white;
-        border-radius: 100%;
-        display: inline-block;
     }
     
     #yourScore {
         margin-right: 11%;
-        margin-top: -31%;
-        height: 250px;
-        width: 250px;
-        background-color: white;
-        border-radius: 100%;
-        float: right;
-        display: inline-block;   
+        margin-top: -31%;  
     }
     .wins {
         margin-top: 8%;
         margin-left: 21%;
         padding-bottom: 10px;
-        font-size: 50px;
-        color: white;
-        display: block;
     }
     
     .losses {
         margin-left: 53%;
         padding-bottom: 14px;
-        font-size: 50px;
-        color: white;
         margin-top: -8%;
-        display: block;
     }
     
 }
